etc/docker/kubernetes/nginx.yaml
#########################################################################
#      Copyright (C) 2020        Sebastian Francisco Colomar Bauza      #
#      SPDX-License-Identifier:  GPL-2.0-only                           #
#########################################################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - 
        image: secobau/nginx:6.1
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
        name: nginx-container
        ports:
          -
            containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 1
        volumeMounts:
        - 
          mountPath: /etc/nginx/conf.d
          name: nginx-default-vol
          readOnly: true
        - 
          mountPath: /run/nginx/etc/nginx
          name: nginx-conf-vol
          readOnly: true
        -
          mountPath: /var/cache/nginx
          name: nginx-cache-vol
        -
          mountPath: /var/log/nginx
          name: nginx-logs-vol
        -
          mountPath: /var/run
          name: nginx-run-vol
      volumes:
      - 
        configMap:
          name: nginx-cm
        name: nginx-conf-vol
      - 
        name: nginx-default-vol
        secret:
          secretName: default-secret
      -
        name: nginx-cache-vol
        emptyDir: {}
      - 
        name: nginx-logs-vol
        emptyDir: {}
      -
        name: nginx-run-vol
        emptyDir: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-netpol
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
    -
      ports:
        -
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - 
    nodePort: 30001
    port: 80
    targetPort: 8080
  selector:
    app: nginx
